force-app/main/default/objects/TE_Invoice_Header__c/TE_Invoice_Header__c.object-meta.xml
<CustomObject>
    <label>TE Invoice Header</label>
    <nameField>
        <displayFormat>INV-{YYYY}-{0000}</displayFormat>
        <label>TE Invoice Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TE Invoice Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>