force-app/main/default/objects/TE_Invoice_Header__c/fields/Account_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_City__c</fullName>
    <formula>Invoice_Account__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing City</label>
    <type>Text</type>
</CustomField>