force-app/main/default/objects/TE_Invoice_Header__c/fields/Account_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Country__c</fullName>
    <formula>Invoice_Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Country</label>
    <type>Text</type>
</CustomField>