force-app/main/default/objects/TE_Invoice_Header__c/fields/Account_Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Postal_Code__c</fullName>
    <formula>Invoice_Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Postal Code</label>
    <type>Text</type>
</CustomField>