force-app/main/default/objects/TE_Invoice_Header__c/fields/Account_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_State__c</fullName>
    <formula>Invoice_Account__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing State</label>
    <type>Text</type>
</CustomField>