force-app/main/default/objects/TE_Invoice_Header__c/fields/Account_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Street__c</fullName>
    <formula>Invoice_Account__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Street</label>
    <type>Text</type>
</CustomField>