force-app/main/default/objects/TE_Invoice_Header__c/fields/Balance_Pending__c.field-meta.xml
<CustomField>
    <fullName>Balance_Pending__c</fullName>
    <formula>Total_Bill_Amount__c - Total_Amount_Collected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>