force-app/main/default/objects/TE_Invoice_Header__c/fields/Invoice_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TE Invoice Headers</relationshipLabel>
    <relationshipName>TE_Invoice_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>