force-app/main/default/objects/TE_Invoice_Header__c/fields/Invoice_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TE Invoice Headers</relationshipLabel>
    <relationshipName>TE_Invoice_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>