force-app/main/default/objects/TE_Invoice_Header__c/fields/Invoice_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact_Email__c</fullName>
    <formula>Invoice_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Contact Email</label>
    <type>Text</type>
</CustomField>