force-app/main/default/objects/TE_Invoice_Header__c/fields/Invoice_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact_Name__c</fullName>
    <formula>Invoice_Contact__r.FirstName+ &apos;&apos; +Invoice_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Contact Name</label>
    <type>Text</type>
</CustomField>