force-app/main/default/objects/TE_Invoice_Header__c/fields/Invoice_Details_Section__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Details_Section__c</fullName>
    <label>Invoice Details Section</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>