force-app/main/default/objects/TE_Invoice_Header__c/fields/Invoice_Seq_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Seq_Nbr__c</fullName>
    <label>Invoice Seq Nbr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>