force-app/main/default/objects/TE_Invoice_Header__c/fields/Send_Status__c.field-meta.xml
<CustomField>
    <fullName>Send_Status__c</fullName>
    <label>Send Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Not to be sent</fullName>
            </value>
            <value>
                <fullName>Not sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>