force-app/main/default/objects/TE_Invoice_Header__c/fields/Surcharge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Amount__c</fullName>
    <label>Surcharge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>