force-app/main/default/objects/TE_Invoice_Header__c/fields/Surcharge_Rate__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Rate__c</fullName>
    <label>Surcharge Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>