force-app/main/default/objects/TE_Invoice_Header__c/fields/TimeEntry_External_Id__c.field-meta.xml
<CustomField>
    <fullName>TimeEntry_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>TimeEntry External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>