force-app/main/default/objects/TE_Invoice_Header__c/fields/Total_Bill_Amount_without_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Bill_Amount_without_Tax__c</fullName>
    <label>Total Bill Amount without Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>